Fixed spacing issue on details pages and add in a loading animation

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -150,7 +150,7 @@ select {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 30%;
+  height: 50%;
   width: 100%;
 }
 
@@ -166,7 +166,7 @@ select {
 }
 .details-footer {
   padding: 0 30px;
-  height: 25%;
+  height: 30%;
   width: 100%;
 }
 
@@ -211,7 +211,7 @@ select {
   text-decoration: none;
 }
 
-/* Create Hangouts Page */
+/* Create Page */
 .create-page {
   margin: 16px auto;
   text-align: center;
